added ascen as a separate experience, removed and added some skills
also removed interestes section to make it all fit in two pages

--- a/cv_pl.tex
+++ b/cv_pl.tex
@@ -36,16 +36,26 @@
     \cventry{2005--2007}{Wykształcenie średnie}{Liceum Ogólnokształcące im. Joachima Lelewela}{Warszawa}{}{}
 
 \section{Doświadczenie}
-\cventry{2013--Teraz\\\includegraphics[width=\hintscolumnwidth]{ascen}}{Administrator Systemów}{Ascen Sp. z o.o}{Warszawa}{Pełen etat}{Administrowanie środowiskami migracyjnymi opartymi na systemach AIX Unix udostępniającymi usługi IBM DB2 oraz narzędzia migracyjne IBM oraz Oracle na potrzeby przeniesienia danych z systemów bazodanowych Polbank do RaiffeisenPolbank. Wykonywanie głównego procesu migracji oraz komunikacja z koordynatorami oraz grupami projektowymi.}
-    \cvitem{}{Odpowiedzialny za:}
+\cventry{2013--Teraz\\\includegraphics[width=\hintscolumnwidth]{ascen}}{Administrator Systemów i Developer}{Ascen Sp. z o.o}{Warszawa}{Pełen etat}{Administracja oraz tworzenie rozwiązań transformacji danych oraz raportowania na potrzeby wielu projektów. Między innymi:}
+    \cvitem{}{Tworzenia systemu raportowego dla Urzędu do Spraw Cudzoziemców}
+    \cvlistitem{Tworzenie pełnego planu kopii bezpieczeństwa}
+    \cvlistitem{Rozwiązywanie problemów wydajności z SQL Server Reporting Services}
+    \cvlistitem{Testy wydajności platformy Microsoft Sharepoint}
+    \cvlistitem{Rozwiązywanie problemów bezpieczeństwa witryn i certyfikatów}
+    \cvitem{}{Tworzenie infrastruktury do współdzielenia farmy renderującej 3D dla Nemotion Studios}
+    \cvlistitem{Oprogramowanie automatyzacji uruchamiania zadań Autodesk Backburner}
+    \cvlistitem{Konfiguracja dostępu dla klientów i partnerów poprzez FTP oraz WebDAV}
+    \cvitem{}{Wsparcie produktu IBM DataStage dla TUiR Warta}
+    \cvlistitem{Rozwiązywanie problemów komunikacji baz danych}
+    \cvlistitem{Diagnozowanie problemów IBM Information Server}
+\cventry{2013--2014\\\includegraphics[width=\hintscolumnwidth]{raiffeisen}}{Administrator Systemów}{Raiffeisen Polbank S.A.}{Warszawa}{Pełen etat}{Administrowanie środowiskami migracyjnymi opartymi na systemach AIX Unix udostępniającymi usługi IBM DB2 oraz narzędzia migracyjne IBM oraz Oracle na potrzeby przeniesienia danych z systemów bazodanowych Polbank do RaiffeisenPolbank. Wykonywanie głównego procesu migracji oraz komunikacja z koordynatorami oraz grupami projektowymi. Odpowiedzialny za:}
     \cvlistitem{Serwery IBM AIX Unix}
     \cvlistitem{Zarządzanie Oracle Data Integrator oraz IBM DataStage}
     \cvlistitem{Analizowanie i diagnostyka problemów w bazach danych SQL}
     \cvlistitem{Identyfikacja i przekazywanie defektów do adminów systemów bankowych i grup projektowych}
     \cvlistitem{Zarządzanie wymianą plików pomiędzy środowiskami migracyjnymi i grupami projektowymi}
     \cvlistitem{Automatyzacja zadań przy pomocy skryptów(Bash, AWK, SQL)}
-\cventry{2011--2013\\\includegraphics[width=\hintscolumnwidth]{trinity}}{Specjalista IT}{Trinity Corporate Services Sp. z o.o.}{Warszawa}{Pełen etat}{Nadzorowanie i opieka nad infrastrukturą IT oraz rozwiązywanie wszelkich problemów z nią związanych. Wykonywanie projektów informatycznych, np.: migracji systemu pocztowego z lokalnych serwerów do zdalnego dostawcy, modernizacji infrastruktury biur zagranicznych lub wdrażanie nowego oprogramowania.}
-    \cvitem{}{Odpowiedzialny za:}
+\cventry{2011--2013\\\includegraphics[width=\hintscolumnwidth]{trinity}}{Specjalista IT}{Trinity Corporate Services Sp. z o.o.}{Warszawa}{Pełen etat}{Nadzorowanie i opieka nad infrastrukturą IT oraz rozwiązywanie wszelkich problemów technicznych. Wykonywanie projektów, np.: migracji systemu pocztowego z lokalnych serwerów do zdalnego dostawcy, modernizacji infrastruktury biur zagranicznych lub wdrażanie oprogramowania. Odpowiedzialny za:}
     \cvlistitem{Serwery Windows(2003 oraz 2008) oraz Linux(Ubuntu Server)}
     \cvlistitem{Monitorowanie działalności systemów informatycznych(Cacti, Graylog2)}
     \cvlistitem{Automatyzację wszelkich procesów informatycznych(kopie bezpieczeństwa, konwersje danych)}
@@ -54,17 +64,14 @@
     \cvlistitem{Obsługiwanie serwerów poczty Microsoft Exchange oraz Hosted Exchange}
 
     \vspace*{3mm}
-    \cventry{2012\\\includegraphics[width=\hintscolumnwidth]{empirius}}{Umowa o dzieło}{Empirius Group Sp. z o.o.}{Warszawa}{Praca doraźna}{Stworzenie od podstaw infrastruktury komputerowej w małym biurze firmy dla około 10 komputerów. Wybór sprzętu i oprogramowania, instalacja i konfiguracja, rozłożenie kabli. W tym instalacja oraz konfiguracja serwera HP z systemem Windows Server 2008 na potrzeby bezpiecznej wymiany plików oraz współdzielenia drukarki oraz skanera.}
+    \cventry{2012\\\includegraphics[width=\hintscolumnwidth]{empirius}}{Umowa o dzieło}{Empirius Group Sp. z o.o.}{Warszawa}{Praca doraźna}{Stworzenie od podstaw infrastruktury komputerowej w małym biurze firmy dla około 10 komputerów. Wybór sprzętu i oprogramowania, instalacja i konfiguracja, rozłożenie kabli. W tym instalacja oraz konfiguracja serwera HP z systemem Windows Server 2008 na potrzeby bezpiecznej wymiany plików}
 
     \vspace*{3mm}
-    \cventry{2010\\\includegraphics[width=\hintscolumnwidth]{izomar}}{Stażysta-Praktykant}{BIS Izomar Sp. z o.o.}{Warszawa}{Dwumiesięczny staż}{Staż skupiający się na obsłudze technicznej placówki budowlanej w elektrociepłowni ``Żerań''. Odpowiedzialny za komputery oraz drukarki. W drugiej połowie stażu powierzone wykonanie konfiguracji VLAN na przełącznikach trzeciej warstwy firmy DELL na potrzeby rozdzielania sieci głównego biura firmy w celu zwiększenia bezpieczeństwa oraz ułatwienia zarządzania.}
-    \cvitem{}{Zdobyte doświadczenie:}
-    \cvlistitem{Tworzenia infrastruktury IT małego biura na budowie ``Żerań''}
-    \cvlistitem{Przepisy o ochronie danych osobowych oraz tajemnic państwowych oraz służbowych}
+    \cventry{2010\\\includegraphics[width=\hintscolumnwidth]{izomar}}{Stażysta-Praktykant}{BIS Izomar Sp. z o.o.}{Warszawa}{Dwumiesięczny staż}{Staż skupiający się na obsłudze technicznej placówki budowlanej w elektrociepłowni ``Żerań''. Powierzone również wykonanie konfiguracji VLAN na przełącznikach trzeciej warstwy firmy DELL na potrzeby rozdzielania sieci głównego biura firmy w celu zwiększenia bezpieczeństwa oraz ułatwienia zarządzania.}
 
 \section{Praca Inżynierska}
-\cvitem{Tytuł}{\textbf{Udostępnianie znakowych urządzeń fizycznych za pośrednictwem sieci w systemach GNU/Linux}}
-    \cvitem{Specjalizacja}{Programowanie Systemowe i Sieciowe}
+    \cvitem{Tytuł}{\textbf{Udostępnianie znakowych urządzeń fizycznych za pośrednictwem sieci w systemach GNU/Linux}}
+    \cvitem{Specjalizacja}{Programowanie Systemowe i Sieciowe\hspace{20mm}Ocena \textbf{5.0}}
     \cvitem{Opis}{Zestaw oprogramowania składający się z serwera oraz modułu jądra Linux udostępniający w sposób przezroczysty dla użytkowników urządzenia znakowe na zdalnych maszynach.}
 
 \section{Języki obce}
@@ -72,21 +79,17 @@
     \cvitemwithcomment{Niemiecki}{Podstawy}{Podstawowa znajomość nabyta w liceum.}
 
 \section{Umiejętności}
-    \cvitem{Języki}{C, C++, Java, Bash, AWK, Powershell, SQL, Lua, \LaTeX, HTML, CSS, UML}
-    \cvitem{Systemy}{GNU/Linux(wszystkie odmiany Debian oraz Gentoo), Windows, Windows Server 2003 i 2008, IBM AIX Unix}
-    \cvitem{Sprzęt}{Komputery i peryferia, Serwery oraz stacje robocze DELL, Przełączniki oraz routery Cisco i DELL, Zasilacze awaryjne APC}
-    \cvitem{Sieć}{Routing statyczny oraz dynamiczny RIP i OSPF, DHCP, DNS, NAT, QoS, WLAN, wszystkie warstwy modelu OSI}
+    \cvitem{Języki}{C, C++, C\#, Java, Bash, AWK, Powershell, SQL, Lua, \LaTeX, HTML, CSS, UML}
+    \cvitem{Systemy}{GNU/Linux(Debian, Red Hat i Gentoo), Windows Server 2003 do 2012, IBM AIX Unix}
+    \cvitem{Sieć}{Routing statyczny oraz dynamiczny RIP i OSPF, DHCP, DNS, NAT, QoS, VPN, VLAN}
+    \cvitem{Narzędzia}{Microsoft RSAT, MS Powershell, MS SQL Studio, Pakiet MS Office, Git, GNU Make, VIM}
     \cvitem{Platformy}{Active Directory, Group Policy, Hyper-V, VirtualBox, DB2, MSSQL, MySQL, Postgresql, IIS, Apache, nginx, lighttpd, Samba, NFS, rsync, Symantec Backup Exec, Cacti, Graylog2, iptables, iproute2, bind, postfix}
-    \cvitem{Narzędzia}{Microsoft RSAT, MS Powershell, MS SQL Studio, Pakiet MS Office, Git, GNU Make, VIM, Gimp, Photoshop}
-    \cvitem{Specjalistyczne}{Oprogramowanie ERP Exact Globe, Systemy księgowania Sage, System księgowo-płacowy Płatnik, Większość europejskich platform bankowości elektronicznej, Oracle Database Integrator, IBM DateStage}
+    \cvitem{Specjalistyczne}{Oprogramowanie ERP Exact Globe, Systemy księgowania Sage, System księgowo-płacowy Płatnik, Większość europejskich platform bankowości elektronicznej, Oracle Database Integrator, IBM DateStage, SQL Server Integration and Reporting Services, SharePoint 2012}
 
 \section{Kursy i certyfikaty}
     \cvitem{2011}{PJWSTK Certificate in Business English, poziom C1}
     \cvitem{2009}{Ukończony kurs Cisco CCNA}
     \cvitem{2009}{Ukończony kurs pierwszego stopnia Linux Professional Institute}
-
-\section{Zainteresowania}
-    \cvitem{}{Informatyka, ekonomia, historia, socjologia, filozofia, futurologia, astronomia, biologia molekularna}
 
 \lfoot{\scriptsize{Wyrażam zgodę na przetwarzanie moich danych osobowych zawartych w mojej aplikacji dla potrzeb niezbędnych do realizacji procesów rekrutacji (zgodnie z Ustawą z dnia 29 sierpnia 1997 r. o ochronie danych osobowych tj. Dz. U. z 2002 r., Nr 101, poz. 926, ze zm.).}}
 \end{document}
