--- a/cv_en.tex
+++ b/cv_en.tex
@@ -36,7 +36,19 @@
     \cventry{2005--2007}{Secondary School}{High School of Joachim Lelewel}{Warsaw}{}{}
 
 \section{Experience}
-\cventry{2013--Now\\\includegraphics[width=\hintscolumnwidth]{ascen}}{System Administrator}{Ascen Sp. z o.o}{Warszawa}{Full time}{Working as a contractor system administrator for AIX Unix data migration environments running IBM DB2 as well as IBM and Oracle migration tools used in merging of databases from Polbank with Raiffeisen Bank. Executing the main branch of the migration process and communicating with migration coordinators and project groups.}
+\cventry{2013--Now\\\includegraphics[width=\hintscolumnwidth]{ascen}}{Administrator Systemów i Developer}{Ascen Sp. z o.o}{Warszawa}{Full time}{Working as system administrator as well as a developer for Ascen. Taking part in multiple projects, including:}
+    \cvitem{}{Creation of reporting solution for Polish Office for Foreigners}
+    \cvlistitem{Creation of a comprehensive backup plan for the whole solution}
+    \cvlistitem{Resolving performance issues with Microsoft Reporting Services}
+    \cvlistitem{Performance testing for Microsoft Sharepoint platform}
+    \cvlistitem{Resolving security issues involving certificates}
+    \cvitem{}{Creation of infrastructure for sharing of a 3D rendering farm for Newmotion Studios}
+    \cvlistitem{Creation of automating solution for starting Autodesk Backburner jobs}
+    \cvlistitem{Design and setup of access methods for clients and partners through FTP and WebDAV}
+    \cvitem{}{Support of IBM DataStage for TUiR Warta}
+    \cvlistitem{Resolving database connection issues}
+    \cvlistitem{Diagnosing Information Server configuration errors}
+\cventry{2013--2014\\\includegraphics[width=\hintscolumnwidth]{raiffeisen}}{System Administrator}{Raiffeisen Polbank S.A.}{Warszawa}{Full time}{Working as a contractor system administrator for AIX Unix data migration environments running IBM DB2 as well as IBM and Oracle migration tools used in merging of databases from Polbank with Raiffeisen Bank. Executing the main branch of the migration process and communicating with migration coordinators and project groups.}
     \cvitem{}{Responsible for:}
     \cvlistitem{IBM AIX Unix servers}
     \cvlistitem{Oracle Data Integrator and IBM DataStage management}
@@ -44,8 +56,7 @@
     \cvlistitem{Identifying and relying defects together with bank system admins and project group managers}
     \cvlistitem{Management of file sharing between migration environments and project teams}
     \cvlistitem{Automation of tasks with scripts (Bash, AWK, SQL)}
-\cventry{2011--2013\\\includegraphics[width=\hintscolumnwidth]{trinity}}{IT Specialist}{Trinity Corporate Services Sp. z o.o.}{Warsaw}{Full time}{Monitoring and maintenance of IT infrastructure as well as resolving all related issues. Execution of IT projects such as: migration of local mail servers to a remote hosting provider, updating of infrastructure in remote offices or deployment of new software in offices.}
-    \cvitem{}{Responsible for:}
+\cventry{2011--2013\\\includegraphics[width=\hintscolumnwidth]{trinity}}{IT Specialist}{Trinity Corporate Services Sp. z o.o.}{Warsaw}{Full time}{Monitoring and maintenance of IT infrastructure as well as resolving all related issues. Execution of IT projects such as: migration of local mail servers to a remote hosting provider, updating of infrastructure in remote offices or deployment of new software in offices. Responsible for:}
     \cvlistitem{Windows 2003 and 2008 as well as Linux(Ubuntu Server) servers}
     \cvlistitem{Performance monitoring of IT infrastructure(Cacti, Graylog2)}
     \cvlistitem{Automatization of IT processes(storage backups, data conversions)}
@@ -54,17 +65,14 @@
     \cvlistitem{Maintenance of Microsoft Exchange and Hosted Exchange mail servers}
 
     \vspace*{3mm}
-    \cventry{2012\\\includegraphics[width=\hintscolumnwidth]{empirius}}{Contract Work}{Empirius Group Sp. z o.o.}{Warsaw}{Ad hoc work}{Creation of whole IT infrastructure for a small company office with around 10 workstations. Selecting hardware and software, installation and configuration as well as installing cabling. Included was installation and configuration of a HP server running Windows Server 2008 to facilitate secure sharing of files as well as a printer and a scanner}
+    \cventry{2012\\\includegraphics[width=\hintscolumnwidth]{empirius}}{Contract Work}{Empirius Group Sp. z o.o.}{Warsaw}{Ad hoc work}{Creation of whole IT infrastructure for a small company office with around 10 workstations. Selecting hardware and software, installation and configuration as well as installing cabling. Included was installation and configuration of a HP server running Windows Server 2008 to facilitate secure sharing of files.}
 
     \vspace*{3mm}
-    \cventry{2010\\\includegraphics[width=\hintscolumnwidth]{izomar}}{Intern-Trainee}{BIS Izomar Sp. z o.o.}{Warsaw}{Two month internship}{Internship focusing on providing technical assistance on construction site at power plant ``Żerań''. Responsible for computers and printers. During the second half of internship tasked with developing a VLAN configuration using third layer switches that will improve security and ease of management in the main office.}
-    \cvitem{}{Acquired experience:}
-    \cvlistitem{Creating IT infrastructure in a small office on construction site ``Żerań''}
-    \cvlistitem{Regulation regarding security of personal, governmental and business data}
+    \cventry{2010\\\includegraphics[width=\hintscolumnwidth]{izomar}}{Intern-Trainee}{BIS Izomar Sp. z o.o.}{Warsaw}{Two month internship}{Internship focusing on providing technical assistance on construction site at power plant ``Żerań''. Also tasked with developing a VLAN configuration using third layer switches that will improve security and ease of management in the main office.}
 
 \section{Engineering thesis}
-\cvitem{Title}{\textbf{Sharing of character devices over networks in GNU/Linux systems}}
-    \cvitem{Specialization}{System and Network Programming}
+    \cvitem{Title}{\textbf{Sharing of character devices over networks in GNU/Linux systems}}
+    \cvitem{Specialization}{System and Network Programming\hspace{20mm}Mark \textbf{5.0}}
     \cvitem{Description}{A set of software made up of a server and a Linux kernel module that lets processes access a physical device that is connected to a remote machine in a completely transparent way.}
 
 \section{Foreign languages}
@@ -72,21 +80,17 @@
     \cvitemwithcomment{German}{Basic}{Basic understanding acquired in secondary school.}
 
 \section{Knowledge}
-    \cvitem{Languages}{C, C++, Java, Bash, AWK, Powershell, SQL, Lua, \LaTeX, HTML, CSS, UML}
-    \cvitem{Systems}{GNU/Linux(all flavours of Debian and Gentoo), Windows, Windows Server 2003 and 2008, IBM AIX Unix}
-    \cvitem{Hardware}{Computers and peripherals, DELL workstations and servers, Cisco and DELL switches and routers, APC backup power supplies}
-    \cvitem{Networks}{Static and dynamic routing with RIP and OSPF, DHCP, DNS, NAT, QoS, WLAN, all layers of OSI model}
+    \cvitem{Languages}{C, C++, C\# Java, Bash, AWK, Powershell, SQL, Lua, \LaTeX, HTML, CSS, UML}
+    \cvitem{Systems}{GNU/Linux(Debian, Red Hat and Gentoo), Windows Server 2003 to 2012, IBM AIX Unix}
+    \cvitem{Networks}{Static and dynamic routing with RIP and OSPF, DHCP, DNS, NAT, QoS, VPN, VLAN}
+    \cvitem{Tools}{Microsoft RSAT, MS Powershell, MS SQL Studio, MS Office Suite, Git, GNU Make, VIM}
     \cvitem{Platforms}{Active Directory, Group Policy, Hyper-V, VirtualBox, DB2, MS SQL, MySQL, Postgresql, IIS, Apache, nginx, lighttpd, Samba, NFS, rsync, Symantec Backup Exec, Cacti, Graylog2, iptables, iproute2, bind, postfix}
-    \cvitem{Tools}{Microsoft RSAT, MS Powershell, MS SQL Studio, MS Office Suite, Git, GNU Make, VIM, Gimp, Photoshop}
-    \cvitem{Extra}{Exact Globe ERP software, Sage accounting systems, Accounting and payroll system Płatnik, most of European online banking platforms, Oracle Database Integrator, IBM DataStage}
+    \cvitem{Extra}{Exact Globe ERP software, Sage accounting systems, Accounting and payroll system Płatnik, most of European online banking platforms, Oracle Database Integrator, IBM DataStage, SQL Server Integration Services i Reporting Services, SharePoint 2012}
 
 \section{Courses and certificates}
     \cvitem{2011}{PJWSTK Certificate in Business English, C1 level}
     \cvitem{2009}{Completed Cisco CCNA course}
     \cvitem{2009}{Completed first level of Linux Professional Institute course}
     
-\section{Interests}
-    \cvitem{}{Informatics, economics, history, sociology, philosophy, futurology, astronomy, molecular biology}
-
 \lfoot{\scriptsize{Wyrażam zgodę na przetwarzanie moich danych osobowych zawartych w mojej aplikacji dla potrzeb niezbędnych do realizacji procesów rekrutacji (zgodnie z Ustawą z dnia 29 sierpnia 1997 r. o ochronie danych osobowych tj. Dz. U. z 2002 r., Nr 101, poz. 926, ze zm.).}}
 \end{document}
