corrected to polish

--- a/cv_pl.tex
+++ b/cv_pl.tex
@@ -35,8 +35,7 @@
     \vspace*{3mm}
     \cventry{2005--2007}{Wykształcenie średnie}{Liceum Ogólnokształcące im. Joachima Lelewela}{Warszawa}{}{}
 
-\section{Doświadczenie}
-\cventry{2013--Teraz\\\includegraphics[width=\hintscolumnwidth]{ascen}}{Administrator Systemów i Developer}{Ascen Sp. z o.o}{Warszawa}{Pełen etat}{Administracja oraz tworzenie rozwiązań transformacji danych oraz raportowania na potrzeby wielu projektów. Między innymi:}
+\section{Doświadczenie}\cventry{2013--Teraz\\\includegraphics[width=\hintscolumnwidth]{ascen}}{Administrator Systemów i Deweloper}{Ascen Sp. z o.o}{Warszawa}{Pełen etat}{Administracja oraz tworzenie rozwiązań transformacji danych oraz raportowania na potrzeby wielu projektów. Między innymi:}
     \cvitem{}{Tworzenia systemu raportowego dla Urzędu do Spraw Cudzoziemców}
     \cvlistitem{Tworzenie pełnego planu kopii bezpieczeństwa}
     \cvlistitem{Rozwiązywanie problemów wydajności z SQL Server Reporting Services}
@@ -83,7 +82,7 @@
     \cvitem{Systemy}{GNU/Linux(Debian, Red Hat i Gentoo), Windows Server 2003 do 2012, IBM AIX Unix}
     \cvitem{Sieć}{Routing statyczny oraz dynamiczny RIP i OSPF, DHCP, DNS, NAT, QoS, VPN, VLAN}
     \cvitem{Narzędzia}{Microsoft RSAT, MS Powershell, MS SQL Studio, Pakiet MS Office, Git, GNU Make, VIM}
-    \cvitem{Platformy}{Active Directory, Group Policy, Hyper-V, VirtualBox, DB2, MSSQL, MySQL, Postgresql, IIS, Apache, nginx, lighttpd, Samba, NFS, rsync, Symantec Backup Exec, Cacti, Graylog2, iptables, iproute2, bind, postfix}
+    \cvitem{Platformy}{Active Directory, Group Policy, Hyper-V, VMWare, VirtualBox, DB2, MSSQL, MySQL, Postgresql, IIS, Apache, nginx, lighttpd, Samba, NFS, rsync, Symantec Backup Exec, Cacti, Graylog2, iptables, iproute2, bind, postfix}
     \cvitem{Specjalistyczne}{Oprogramowanie ERP Exact Globe, Systemy księgowania Sage, System księgowo-płacowy Płatnik, Większość europejskich platform bankowości elektronicznej, Oracle Database Integrator, IBM DateStage, SQL Server Integration and Reporting Services, SharePoint 2012}
 
 \section{Kursy i certyfikaty}
