corrected to english

--- a/cv_en.tex
+++ b/cv_en.tex
@@ -36,7 +36,7 @@
     \cventry{2005--2007}{Secondary School}{High School of Joachim Lelewel}{Warsaw}{}{}
 
 \section{Experience}
-\cventry{2013--Now\\\includegraphics[width=\hintscolumnwidth]{ascen}}{Administrator Systemów i Developer}{Ascen Sp. z o.o}{Warszawa}{Full time}{Working as system administrator as well as a developer for Ascen. Taking part in multiple projects, including:}
+\cventry{2013--Now\\\includegraphics[width=\hintscolumnwidth]{ascen}}{System Administrator and Developer}{Ascen Sp. z o.o}{Warszawa}{Full time}{Working as system administrator as well as a developer for Ascen. Taking part in multiple projects, including:}
     \cvitem{}{Creation of reporting solution for Polish Office for Foreigners}
     \cvlistitem{Creation of a comprehensive backup plan for the whole solution}
     \cvlistitem{Resolving performance issues with Microsoft Reporting Services}
@@ -48,8 +48,7 @@
     \cvitem{}{Support of IBM DataStage for TUiR Warta}
     \cvlistitem{Resolving database connection issues}
     \cvlistitem{Diagnosing Information Server configuration errors}
-\cventry{2013--2014\\\includegraphics[width=\hintscolumnwidth]{raiffeisen}}{System Administrator}{Raiffeisen Polbank S.A.}{Warszawa}{Full time}{Working as a contractor system administrator for AIX Unix data migration environments running IBM DB2 as well as IBM and Oracle migration tools used in merging of databases from Polbank with Raiffeisen Bank. Executing the main branch of the migration process and communicating with migration coordinators and project groups.}
-    \cvitem{}{Responsible for:}
+\cventry{2013--2014\\\includegraphics[width=\hintscolumnwidth]{raiffeisen}}{System Administrator}{Raiffeisen Polbank S.A.}{Warszawa}{Full time}{Working as a contractor system administrator for AIX Unix data migration environments running IBM DB2 as well as IBM and Oracle migration tools used in merging of databases from Polbank with Raiffeisen Bank. Executing the main branch of the migration process and communicating with migration coordinators and project groups. Responsible for:}
     \cvlistitem{IBM AIX Unix servers}
     \cvlistitem{Oracle Data Integrator and IBM DataStage management}
     \cvlistitem{Analyzing and diagnosing SQL database problems}
@@ -84,7 +83,7 @@
     \cvitem{Systems}{GNU/Linux(Debian, Red Hat and Gentoo), Windows Server 2003 to 2012, IBM AIX Unix}
     \cvitem{Networks}{Static and dynamic routing with RIP and OSPF, DHCP, DNS, NAT, QoS, VPN, VLAN}
     \cvitem{Tools}{Microsoft RSAT, MS Powershell, MS SQL Studio, MS Office Suite, Git, GNU Make, VIM}
-    \cvitem{Platforms}{Active Directory, Group Policy, Hyper-V, VirtualBox, DB2, MS SQL, MySQL, Postgresql, IIS, Apache, nginx, lighttpd, Samba, NFS, rsync, Symantec Backup Exec, Cacti, Graylog2, iptables, iproute2, bind, postfix}
+    \cvitem{Platforms}{Active Directory, Group Policy, Hyper-V, VMWare, VirtualBox, DB2, MS SQL, MySQL, Postgresql, IIS, Apache, nginx, lighttpd, Samba, NFS, rsync, Symantec Backup Exec, Cacti, Graylog2, iptables, iproute2, bind, postfix}
     \cvitem{Extra}{Exact Globe ERP software, Sage accounting systems, Accounting and payroll system Płatnik, most of European online banking platforms, Oracle Database Integrator, IBM DataStage, SQL Server Integration Services i Reporting Services, SharePoint 2012}
 
 \section{Courses and certificates}
