--- a/cv_en.tex
+++ b/cv_en.tex
@@ -36,7 +36,7 @@
     \cventry{2005--2007}{Secondary School}{High School of Joachim Lelewel}{Warsaw}{}{}
 
 \section{Experience}
-\cventry{2013--Now\\\includegraphics[width=\hintscolumnwidth]{ascen}}{System Administrator and Developer}{Ascen Sp. z o.o}{Warszawa}{Full time}{Working as system administrator as well as a developer for Ascen. Taking part in multiple projects, including:}
+\cventry{2013--Now\\\includegraphics[width=\hintscolumnwidth]{ascen}}{System Administrator and Developer}{Ascen Sp. z o.o}{Warsaw}{Full time}{Working as system administrator as well as a developer for Ascen. Taking part in multiple projects, including:}
     \cvitem{}{Creation of reporting solution for Polish Office for Foreigners}
     \cvlistitem{Creation of a comprehensive backup plan for the whole solution}
     \cvlistitem{Resolving performance issues with Microsoft Reporting Services}
@@ -48,7 +48,7 @@
     \cvitem{}{Support of IBM DataStage for TUiR Warta}
     \cvlistitem{Resolving database connection issues}
     \cvlistitem{Diagnosing Information Server configuration errors}
-\cventry{2013--2014\\\includegraphics[width=\hintscolumnwidth]{raiffeisen}}{System Administrator}{Raiffeisen Polbank S.A.}{Warszawa}{Full time}{Working as a contractor system administrator for AIX Unix data migration environments running IBM DB2 as well as IBM and Oracle migration tools used in merging of databases from Polbank with Raiffeisen Bank. Executing the main branch of the migration process and communicating with migration coordinators and project groups. Responsible for:}
+\cventry{2013--2014\\\includegraphics[width=\hintscolumnwidth]{raiffeisen}}{System Administrator}{Raiffeisen Polbank S.A.}{Warsaw}{Full time}{Working as a contractor system administrator for AIX Unix data migration environments running IBM DB2 as well as IBM and Oracle migration tools used in merging of databases from Polbank with Raiffeisen Bank. Executing the main branch of the migration process and communicating with migration coordinators and project groups. Responsible for:}
     \cvlistitem{IBM AIX Unix servers}
     \cvlistitem{Oracle Data Integrator and IBM DataStage management}
     \cvlistitem{Analyzing and diagnosing SQL database problems}
