added LOT project info and guardium course, shortened others

--- a/cv_en.tex
+++ b/cv_en.tex
@@ -36,11 +36,13 @@
     \cventry{2005--2007}{Secondary School}{High School of Joachim Lelewel}{Warsaw}{}{}
 
 \section{Experience}
-\cventry{2013--Now\\\includegraphics[width=\hintscolumnwidth]{ascen}}{System Administrator and Developer}{Ascen Sp. z o.o}{Warsaw}{Full time}{Working as system administrator as well as a developer for Ascen. Taking part in multiple projects, including:}
+\cventry{2013--Now\\\includegraphics[width=\hintscolumnwidth]{ascen}}{System Administrator and Developer}{Ascen Sp. z o.o}{Warsaw}{Full time}{Working as system administrator as well as a developer for Ascen. Taking part in multiple projects involving Extracting, Transforming and Loading data:}
+    \cvitem{}{Creating an ETL solution for LOT Polish Airlines}
+    \cvlistitem{Developing processes for loading and exporting data in multiple formats in Microsoft SSIS}
+    \cvlistitem{Designing a robust logging infrastructure for reliable ETL process monitoring}
     \cvitem{}{Creation of reporting solution for Polish Office for Foreigners}
     \cvlistitem{Creation of a comprehensive backup plan for the whole solution}
-    \cvlistitem{Resolving performance issues with Microsoft Reporting Services}
-    \cvlistitem{Performance testing for Microsoft Sharepoint platform}
+    \cvlistitem{Testing and resolving performance issues with Microsoft Reporting Services and SharePoint}
     \cvlistitem{Resolving security issues involving certificates}
     \cvitem{}{Creation of infrastructure for sharing of a 3D rendering farm for Newmotion Studios}
     \cvlistitem{Creation of automating solution for starting Autodesk Backburner jobs}
@@ -79,7 +81,7 @@
     \cvitemwithcomment{German}{Basic}{Basic understanding acquired in secondary school.}
 
 \section{Knowledge}
-    \cvitem{Languages}{C, C++, C\# Java, Bash, AWK, Powershell, SQL, Lua, \LaTeX, HTML, CSS, UML}
+    \cvitem{Languages}{C, C\# Java, Bash, AWK, Powershell, SQL, Lua, \LaTeX, HTML, CSS, UML}
     \cvitem{Systems}{GNU/Linux(Debian, Red Hat and Gentoo), Windows Server 2003 to 2012, IBM AIX Unix}
     \cvitem{Networks}{Static and dynamic routing with RIP and OSPF, DHCP, DNS, NAT, QoS, VPN, VLAN}
     \cvitem{Tools}{Microsoft RSAT, MS Powershell, MS SQL Studio, MS Office Suite, Git, GNU Make, VIM}
@@ -87,6 +89,7 @@
     \cvitem{Extra}{Exact Globe ERP software, Sage accounting systems, Accounting and payroll system Płatnik, most of European online banking platforms, Oracle Database Integrator, IBM DataStage, SQL Server Integration Services i Reporting Services, SharePoint 2012}
 
 \section{Courses and certificates}
+    \cvitem{2014}{IBM InfoSphere Guardium Data Security course}
     \cvitem{2011}{PJWSTK Certificate in Business English, C1 level}
     \cvitem{2009}{Completed Cisco CCNA course}
     \cvitem{2009}{Completed first level of Linux Professional Institute course}
