--- a/cv_pl.tex
+++ b/cv_pl.tex
@@ -35,11 +35,14 @@
     \vspace*{3mm}
     \cventry{2005--2007}{Wykształcenie średnie}{Liceum Ogólnokształcące im. Joachima Lelewela}{Warszawa}{}{}
 
-\section{Doświadczenie}\cventry{2013--Teraz\\\includegraphics[width=\hintscolumnwidth]{ascen}}{Administrator Systemów i Deweloper}{Ascen Sp. z o.o}{Warszawa}{Pełen etat}{Administracja oraz tworzenie rozwiązań transformacji danych oraz raportowania na potrzeby wielu projektów. Między innymi:}
+\section{Doświadczenie}
+\cventry{2013--Teraz\\\includegraphics[width=\hintscolumnwidth]{ascen}}{Administrator Systemów i Deweloper}{Ascen Sp. z o.o}{Warszawa}{Pełen etat}{Administracja oraz tworzenie rozwiązań transformacji danych oraz raportowania na potrzeby wielu projektów. Między innymi:}
+    \cvitem{}{Tworzenie rozwiązania ETL dla Polskich Linii Lotniczych LOT}
+    \cvlistitem{Rozwijanie procesu ładowanie i eksportowania danych w wielu formatach w Microsoft SSIS}
+    \cvlistitem{Projektowanie niezawodnej infrastruktury logowania na potrzeby monitorowania procesu ETL}
     \cvitem{}{Tworzenia systemu raportowego dla Urzędu do Spraw Cudzoziemców}
     \cvlistitem{Tworzenie pełnego planu kopii bezpieczeństwa}
-    \cvlistitem{Rozwiązywanie problemów wydajności z SQL Server Reporting Services}
-    \cvlistitem{Testy wydajności platformy Microsoft Sharepoint}
+    \cvlistitem{Testowanie i rozwiązywanie problemów wydajności z Microsoft Reporting Services i SharePoint}
     \cvlistitem{Rozwiązywanie problemów bezpieczeństwa witryn i certyfikatów}
     \cvitem{}{Tworzenie infrastruktury do współdzielenia farmy renderującej 3D dla Nemotion Studios}
     \cvlistitem{Oprogramowanie automatyzacji uruchamiania zadań Autodesk Backburner}
@@ -69,7 +72,7 @@
     \cventry{2010\\\includegraphics[width=\hintscolumnwidth]{izomar}}{Stażysta-Praktykant}{BIS Izomar Sp. z o.o.}{Warszawa}{Dwumiesięczny staż}{Staż skupiający się na obsłudze technicznej placówki budowlanej w elektrociepłowni ``Żerań''. Powierzone również wykonanie konfiguracji VLAN na przełącznikach trzeciej warstwy firmy DELL na potrzeby rozdzielania sieci głównego biura firmy w celu zwiększenia bezpieczeństwa oraz ułatwienia zarządzania.}
 
 \section{Praca Inżynierska}
-    \cvitem{Tytuł}{\textbf{Udostępnianie znakowych urządzeń fizycznych za pośrednictwem sieci w systemach GNU/Linux}}
+    \cvitem{Tytuł}{\textbf{Udostępnianie znakowych urządzeń za pośrednictwem sieci w systemach GNU/Linux}}
     \cvitem{Specjalizacja}{Programowanie Systemowe i Sieciowe\hspace{20mm}Ocena \textbf{5.0}}
     \cvitem{Opis}{Zestaw oprogramowania składający się z serwera oraz modułu jądra Linux udostępniający w sposób przezroczysty dla użytkowników urządzenia znakowe na zdalnych maszynach.}
 
@@ -78,7 +81,7 @@
     \cvitemwithcomment{Niemiecki}{Podstawy}{Podstawowa znajomość nabyta w liceum.}
 
 \section{Umiejętności}
-    \cvitem{Języki}{C, C++, C\#, Java, Bash, AWK, Powershell, SQL, Lua, \LaTeX, HTML, CSS, UML}
+    \cvitem{Języki}{C, C\#, Java, Bash, AWK, Powershell, SQL, Lua, \LaTeX, HTML, CSS, UML}
     \cvitem{Systemy}{GNU/Linux(Debian, Red Hat i Gentoo), Windows Server 2003 do 2012, IBM AIX Unix}
     \cvitem{Sieć}{Routing statyczny oraz dynamiczny RIP i OSPF, DHCP, DNS, NAT, QoS, VPN, VLAN}
     \cvitem{Narzędzia}{Microsoft RSAT, MS Powershell, MS SQL Studio, Pakiet MS Office, Git, GNU Make, VIM}
@@ -86,6 +89,7 @@
     \cvitem{Specjalistyczne}{Oprogramowanie ERP Exact Globe, Systemy księgowania Sage, System księgowo-płacowy Płatnik, Większość europejskich platform bankowości elektronicznej, Oracle Database Integrator, IBM DateStage, SQL Server Integration and Reporting Services, SharePoint 2012}
 
 \section{Kursy i certyfikaty}
+    \cvitem{2014}{Ukończony kurs IBM InfoSphere Guardium Data Security}
     \cvitem{2011}{PJWSTK Certificate in Business English, poziom C1}
     \cvitem{2009}{Ukończony kurs Cisco CCNA}
     \cvitem{2009}{Ukończony kurs pierwszego stopnia Linux Professional Institute}
