--- a/cv_pl.tex
+++ b/cv_pl.tex
@@ -38,9 +38,9 @@
 \section{Doświadczenie}
 \cventry{2013--Teraz\\\includegraphics[width=\hintscolumnwidth]{ascen}}{Administrator Systemów i Deweloper}{Ascen Sp. z o.o}{Warszawa}{Pełen etat}{Administracja oraz tworzenie rozwiązań transformacji danych oraz raportowania na potrzeby wielu projektów. Między innymi:}
     \cvitem{}{Tworzenie rozwiązania ETL dla Polskich Linii Lotniczych LOT}
-    \cvlistitem{Rozwijanie procesu ładowanie i eksportowania danych w wielu formatach w Microsoft SSIS}
+    \cvlistitem{Rozwijanie procesu ładowania i eksportowania danych w wielu formatach w Microsoft SSIS}
     \cvlistitem{Projektowanie niezawodnej infrastruktury logowania na potrzeby monitorowania procesu ETL}
-    \cvitem{}{Tworzenia systemu raportowego dla Urzędu do Spraw Cudzoziemców}
+    \cvitem{}{Tworzenie systemu raportowego dla Urzędu do Spraw Cudzoziemców}
     \cvlistitem{Tworzenie pełnego planu kopii bezpieczeństwa}
     \cvlistitem{Testowanie i rozwiązywanie problemów wydajności z Microsoft Reporting Services i SharePoint}
     \cvlistitem{Rozwiązywanie problemów bezpieczeństwa witryn i certyfikatów}
