correct capitalization for title and added IBM

--- a/cv_en.tex
+++ b/cv_en.tex
@@ -49,7 +49,7 @@
     \cvlistitem{Design and setup of access methods for clients and partners through FTP and WebDAV}
     \cvitem{}{Support of IBM DataStage for TUiR Warta}
     \cvlistitem{Resolving database connection issues}
-    \cvlistitem{Diagnosing Information Server configuration errors}
+    \cvlistitem{Diagnosing IBM Information Server configuration errors}
 \cventry{2013--2014\\\includegraphics[width=\hintscolumnwidth]{raiffeisen}}{System Administrator}{Raiffeisen Polbank S.A.}{Warsaw}{Full time}{Working as a contractor system administrator for AIX Unix data migration environments running IBM DB2 as well as IBM and Oracle migration tools used in merging of databases from Polbank with Raiffeisen Bank. Executing the main branch of the migration process and communicating with migration coordinators and project groups. Responsible for:}
     \cvlistitem{IBM AIX Unix servers}
     \cvlistitem{Oracle Data Integrator and IBM DataStage management}
@@ -72,7 +72,7 @@
     \cventry{2010\\\includegraphics[width=\hintscolumnwidth]{izomar}}{Intern-Trainee}{BIS Izomar Sp. z o.o.}{Warsaw}{Two month internship}{Internship focusing on providing technical assistance on construction site at power plant ``Żerań''. Also tasked with developing a VLAN configuration using third layer switches that will improve security and ease of management in the main office.}
 
 \section{Engineering thesis}
-    \cvitem{Title}{\textbf{Sharing of character devices over networks in GNU/Linux systems}}
+    \cvitem{Title}{\textbf{Sharing of Character Devices Over Networks in GNU/Linux Systems}}
     \cvitem{Specialization}{System and Network Programming\hspace{20mm}Mark \textbf{5.0}}
     \cvitem{Description}{A set of software made up of a server and a Linux kernel module that lets processes access a physical device that is connected to a remote machine in a completely transparent way.}
 
