--- a/cv_pl.tex
+++ b/cv_pl.tex
@@ -72,7 +72,7 @@
     \cventry{2010\\\includegraphics[width=\hintscolumnwidth]{izomar}}{Stażysta-Praktykant}{BIS Izomar Sp. z o.o.}{Warszawa}{Dwumiesięczny staż}{Staż skupiający się na obsłudze technicznej placówki budowlanej w elektrociepłowni ``Żerań''. Powierzone również wykonanie konfiguracji VLAN na przełącznikach trzeciej warstwy firmy DELL na potrzeby rozdzielania sieci głównego biura firmy w celu zwiększenia bezpieczeństwa oraz ułatwienia zarządzania.}
 
 \section{Praca Inżynierska}
-    \cvitem{Tytuł}{\textbf{Udostępnianie znakowych urządzeń za pośrednictwem sieci w systemach GNU/Linux}}
+    \cvitem{Tytuł}{\textbf{Udostępnianie Znakowych Urządzeń za Pośrednictwem Sieci w Systemach GNU/Linux}}
     \cvitem{Specjalizacja}{Programowanie Systemowe i Sieciowe\hspace{20mm}Ocena \textbf{5.0}}
     \cvitem{Opis}{Zestaw oprogramowania składający się z serwera oraz modułu jądra Linux udostępniający w sposób przezroczysty dla użytkowników urządzenia znakowe na zdalnych maszynach.}
 
