added oracle exadata course and removed pjwst english course

--- a/cv_en.tex
+++ b/cv_en.tex
@@ -89,8 +89,8 @@
     \cvitem{Extra}{Exact Globe ERP software, Sage accounting systems, Accounting and payroll system Płatnik, most of European online banking platforms, Oracle Database Integrator, IBM DataStage, SQL Server Integration Services i Reporting Services, SharePoint 2012}
 
 \section{Courses and certificates}
+    \cvitem{2014}{Oracle Exadata Technical Boot Camp}
     \cvitem{2014}{IBM InfoSphere Guardium Data Security course}
-    \cvitem{2011}{PJWSTK Certificate in Business English, C1 level}
     \cvitem{2009}{Completed Cisco CCNA course}
     \cvitem{2009}{Completed first level of Linux Professional Institute course}
     
