--- a/cv_pl.tex
+++ b/cv_pl.tex
@@ -89,8 +89,8 @@
     \cvitem{Specjalistyczne}{Oprogramowanie ERP Exact Globe, Systemy księgowania Sage, System księgowo-płacowy Płatnik, Większość europejskich platform bankowości elektronicznej, Oracle Database Integrator, IBM DateStage, SQL Server Integration and Reporting Services, SharePoint 2012}
 
 \section{Kursy i certyfikaty}
+    \cvitem{2014}{Ukończony kurs Oracle Exadata Technical Boot Camp}
     \cvitem{2014}{Ukończony kurs IBM InfoSphere Guardium Data Security}
-    \cvitem{2011}{PJWSTK Certificate in Business English, poziom C1}
     \cvitem{2009}{Ukończony kurs Cisco CCNA}
     \cvitem{2009}{Ukończony kurs pierwszego stopnia Linux Professional Institute}
 
