added codility entry and updates knowledge section
also removes 2 certificates that are old and combined a few lines to
conserve space

--- a/cv_en.tex
+++ b/cv_en.tex
@@ -36,7 +36,14 @@
     \cventry{2005--2007}{Secondary School}{High School of Joachim Lelewel}{Warsaw}{}{}
 
 \section{Experience}
-\cventry{2013--Now\\\includegraphics[width=\hintscolumnwidth]{ascen}}{System Administrator and Developer}{Ascen Sp. z o.o}{Warsaw}{Full time}{Working as system administrator as well as a developer for Ascen. Taking part in multiple projects involving Extracting, Transforming and Loading data:}
+\cventry{2013--Now\\\includegraphics[width=\hintscolumnwidth]{codility}}{System Administrator}{Codility Polska Sp z o.o.}{Warsaw}{Full time}{Management of internal development tools and administration and expansion of infrastructure of the main Codility service. Responsible for:}
+    \cvlistitem{Management of server configuration using Chef}
+    \cvlistitem{Deployment automation with Fabric scripts}
+    \cvlistitem{Maintenance of monitoring systems(Icinga, Grafana, Sentry, Pingdom)}
+    \cvlistitem{Maintenance of logging systems(logstash, elasticsearch, Kibana)}
+    \cvlistitem{Integration of internal development tools(Trac, GitLab, Jenkins)}
+    \cvlistitem{Consultations with clients regarding data security and privacy}
+\cventry{2013--2014\\\includegraphics[width=\hintscolumnwidth]{ascen}}{System Administrator and Developer}{Ascen Sp. z o.o}{Warsaw}{Full time}{Working as system administrator as well as a developer for Ascen. Taking part in multiple projects involving Extracting, Transforming and Loading data. Amongst them:}
     \cvitem{}{Creating an ETL solution for LOT Polish Airlines}
     \cvlistitem{Developing processes for loading and exporting data in multiple formats in Microsoft SSIS}
     \cvlistitem{Designing a robust logging infrastructure for reliable ETL process monitoring}
@@ -62,14 +69,7 @@
     \cvlistitem{Performance monitoring of IT infrastructure(Cacti, Graylog2)}
     \cvlistitem{Automatization of IT processes(storage backups, data conversions)}
     \cvlistitem{Hardware maintenance(servers, routers, workstations)}
-    \cvlistitem{Management of services, such as: MS SQL, MySQL, Hyper-V, Postfix, Git}
-    \cvlistitem{Maintenance of Microsoft Exchange and Hosted Exchange mail servers}
-
-    \vspace*{3mm}
-    \cventry{2012\\\includegraphics[width=\hintscolumnwidth]{empirius}}{Contract Work}{Empirius Group Sp. z o.o.}{Warsaw}{Ad hoc work}{Creation of whole IT infrastructure for a small company office with around 10 workstations. Selecting hardware and software, installation and configuration as well as installing cabling. Included was installation and configuration of a HP server running Windows Server 2008 to facilitate secure sharing of files.}
-
-    \vspace*{3mm}
-    \cventry{2010\\\includegraphics[width=\hintscolumnwidth]{izomar}}{Intern-Trainee}{BIS Izomar Sp. z o.o.}{Warsaw}{Two month internship}{Internship focusing on providing technical assistance on construction site at power plant ``Żerań''. Also tasked with developing a VLAN configuration using third layer switches that will improve security and ease of management in the main office.}
+    \cvlistitem{Management of services, such as: MS SQL, MS Exchange, MySQL, Hyper-V, Postfix, Git}
 
 \section{Engineering thesis}
     \cvitem{Title}{\textbf{Sharing of Character Devices Over Networks in GNU/Linux Systems}}
@@ -81,18 +81,16 @@
     \cvitemwithcomment{German}{Basic}{Basic understanding acquired in secondary school.}
 
 \section{Knowledge}
-    \cvitem{Languages}{C, C\# Java, Bash, AWK, Powershell, SQL, Lua, \LaTeX, HTML, CSS, UML}
-    \cvitem{Systems}{GNU/Linux(Debian, Red Hat and Gentoo), Windows Server 2003 to 2012, IBM AIX Unix}
+    \cvitem{Languages}{C, C\# , Python, Ruby, Java, Bash, AWK, Powershell, SQL, Lua, \LaTeX}
+    \cvitem{Systems}{GNU/Linux(Debian, Ubuntu and Gentoo), Windows Server 2003 to 2012, IBM AIX Unix}
     \cvitem{Networks}{Static and dynamic routing with RIP and OSPF, DHCP, DNS, NAT, QoS, VPN, VLAN}
-    \cvitem{Tools}{Microsoft RSAT, MS Powershell, MS SQL Studio, MS Office Suite, Git, GNU Make, VIM}
-    \cvitem{Platforms}{Active Directory, Group Policy, Hyper-V, VMWare, VirtualBox, DB2, MS SQL, MySQL, Postgresql, IIS, Apache, nginx, lighttpd, Samba, NFS, rsync, Symantec Backup Exec, Cacti, Graylog2, iptables, iproute2, bind, postfix}
-    \cvitem{Extra}{Exact Globe ERP software, Sage accounting systems, Accounting and payroll system Płatnik, most of European online banking platforms, Oracle Database Integrator, IBM DataStage, SQL Server Integration Services i Reporting Services, SharePoint 2012}
+    \cvitem{Tools}{Git, GNU Make, VIM, Microsoft RSAT, MS SQL Studio, MS Office Suite}
+    \cvitem{Platforms}{Chef, Fabric, Apache, nginx, lighttpd, Samba, NFS, Symantec Backup Exec, Cacti, Graylog2, iptables, iproute2, bind, postfix, Active Directory, Group Policy, Hyper-V, VMWare, VirtualBox, DB2, MS SQL, MySQL, Postgresql, IIS}
+    \cvitem{Extra}{Exact Globe ERP software, Sage accounting systems, Accounting and payroll system Płatnik, Oracle Database Integrator, IBM DataStage, SQL Server Integration Services i Reporting Services, SharePoint 2012}
 
 \section{Courses and certificates}
     \cvitem{2014}{Oracle Exadata Technical Boot Camp}
     \cvitem{2014}{IBM InfoSphere Guardium Data Security course}
-    \cvitem{2009}{Completed Cisco CCNA course}
-    \cvitem{2009}{Completed first level of Linux Professional Institute course}
     
 \lfoot{\scriptsize{Wyrażam zgodę na przetwarzanie moich danych osobowych zawartych w mojej aplikacji dla potrzeb niezbędnych do realizacji procesów rekrutacji (zgodnie z Ustawą z dnia 29 sierpnia 1997 r. o ochronie danych osobowych tj. Dz. U. z 2002 r., Nr 101, poz. 926, ze zm.).}}
 \end{document}
