--- a/cv_pl.tex
+++ b/cv_pl.tex
@@ -36,7 +36,14 @@
     \cventry{2005--2007}{Wykształcenie średnie}{Liceum Ogólnokształcące im. Joachima Lelewela}{Warszawa}{}{}
 
 \section{Doświadczenie}
-\cventry{2013--Teraz\\\includegraphics[width=\hintscolumnwidth]{ascen}}{Administrator Systemów i Deweloper}{Ascen Sp. z o.o}{Warszawa}{Pełen etat}{Administracja oraz tworzenie rozwiązań transformacji danych oraz raportowania na potrzeby wielu projektów. Między innymi:}
+\cventry{2013--Teraz\\\includegraphics[width=\hintscolumnwidth]{codility}}{System Administrator}{Codility Polska Sp. z o.o}{Warsaw}{Full time}{Zarządzanie wewnętrznymi narzędziami deweloperskimi oraz administracja i rozwój infrastruktury głównej usługi Codility. Odpowiedzialny za:}
+    \cvlistitem{Zarządzanie konfiguracją serwerów z użyciem systemu Chef}
+    \cvlistitem{Automatyzacja procesu wdrożenia przy pomocy skryptów Fabric}
+    \cvlistitem{Utrzymanie systemów monitorowania(Icinga, Grafana, Sentry, Pingdom)}
+    \cvlistitem{Utrzymanie systemów logowania(logstash, elasticsearch, Kibana)}
+    \cvlistitem{Integracja wewnętrznych systemów developerskich(Trac, GitLab, Jenkins)}
+    \cvlistitem{Konsultacje z klientami na temat bezpieczeństwa danych oraz prywatności}
+\cventry{2013--2014\\\includegraphics[width=\hintscolumnwidth]{ascen}}{Administrator Systemów i Deweloper}{Ascen Sp. z o.o}{Warszawa}{Pełen etat}{Administracja oraz tworzenie rozwiązań transformacji danych oraz raportowania na potrzeby wielu projektów. Między innymi:}
     \cvitem{}{Tworzenie rozwiązania ETL dla Polskich Linii Lotniczych LOT}
     \cvlistitem{Rozwijanie procesu ładowania i eksportowania danych w wielu formatach w Microsoft SSIS}
     \cvlistitem{Projektowanie niezawodnej infrastruktury logowania na potrzeby monitorowania procesu ETL}
@@ -62,14 +69,7 @@
     \cvlistitem{Monitorowanie działalności systemów informatycznych(Cacti, Graylog2)}
     \cvlistitem{Automatyzację wszelkich procesów informatycznych(kopie bezpieczeństwa, konwersje danych)}
     \cvlistitem{Infrastrukturę fizyczną środowiska IT(serwery, routery, komputery biurowe)}
-    \cvlistitem{Zarządzenie usługami takimi jak: MS SQL, MySQL, Hyper-V, Postfix, Git}
-    \cvlistitem{Obsługiwanie serwerów poczty Microsoft Exchange oraz Hosted Exchange}
-
-    \vspace*{3mm}
-    \cventry{2012\\\includegraphics[width=\hintscolumnwidth]{empirius}}{Umowa o dzieło}{Empirius Group Sp. z o.o.}{Warszawa}{Praca doraźna}{Stworzenie od podstaw infrastruktury komputerowej w małym biurze firmy dla około 10 komputerów. Wybór sprzętu i oprogramowania, instalacja i konfiguracja, rozłożenie kabli. W tym instalacja oraz konfiguracja serwera HP z systemem Windows Server 2008 na potrzeby bezpiecznej wymiany plików}
-
-    \vspace*{3mm}
-    \cventry{2010\\\includegraphics[width=\hintscolumnwidth]{izomar}}{Stażysta-Praktykant}{BIS Izomar Sp. z o.o.}{Warszawa}{Dwumiesięczny staż}{Staż skupiający się na obsłudze technicznej placówki budowlanej w elektrociepłowni ``Żerań''. Powierzone również wykonanie konfiguracji VLAN na przełącznikach trzeciej warstwy firmy DELL na potrzeby rozdzielania sieci głównego biura firmy w celu zwiększenia bezpieczeństwa oraz ułatwienia zarządzania.}
+    \cvlistitem{Zarządzenie usługami takimi jak: MS SQL, MS Exchange, MySQL, Hyper-V, Postfix, Git}
 
 \section{Praca Inżynierska}
     \cvitem{Tytuł}{\textbf{Udostępnianie Znakowych Urządzeń za Pośrednictwem Sieci w Systemach GNU/Linux}}
@@ -81,18 +81,16 @@
     \cvitemwithcomment{Niemiecki}{Podstawy}{Podstawowa znajomość nabyta w liceum.}
 
 \section{Umiejętności}
-    \cvitem{Języki}{C, C\#, Java, Bash, AWK, Powershell, SQL, Lua, \LaTeX, HTML, CSS, UML}
-    \cvitem{Systemy}{GNU/Linux(Debian, Red Hat i Gentoo), Windows Server 2003 do 2012, IBM AIX Unix}
+\cvitem{Języki}{C, C\#, Python, Ruby, Java, Bash, AWK, Powershell, SQL, Lua, \LaTeX}
+\cvitem{Systemy}{GNU/Linux(Debian, Ubuntu i Getoo), Windows Server 2003 do 2012, IBM AIX Unix}
     \cvitem{Sieć}{Routing statyczny oraz dynamiczny RIP i OSPF, DHCP, DNS, NAT, QoS, VPN, VLAN}
     \cvitem{Narzędzia}{Microsoft RSAT, MS Powershell, MS SQL Studio, Pakiet MS Office, Git, GNU Make, VIM}
-    \cvitem{Platformy}{Active Directory, Group Policy, Hyper-V, VMWare, VirtualBox, DB2, MSSQL, MySQL, Postgresql, IIS, Apache, nginx, lighttpd, Samba, NFS, rsync, Symantec Backup Exec, Cacti, Graylog2, iptables, iproute2, bind, postfix}
-    \cvitem{Specjalistyczne}{Oprogramowanie ERP Exact Globe, Systemy księgowania Sage, System księgowo-płacowy Płatnik, Większość europejskich platform bankowości elektronicznej, Oracle Database Integrator, IBM DateStage, SQL Server Integration and Reporting Services, SharePoint 2012}
+    \cvitem{Platformy}{Chef, Fabric, Apache, nginx, lighttpd, Samba, NFS, Symantec Backup Exec, Cacti, Graylog2, iptables, iproute2, bind, postfix, Active Directory, Group Policy, Hyper-V, VMWare, VirtualBox, DB2, MSSQL, MySQL, Postgresql, IIS}
+    \cvitem{Specjalistyczne}{Oprogramowanie ERP Exact Globe, Systemy księgowania Sage, System księgowo-płacowy Płatnik, Oracle Database Integrator, IBM DateStage, SQL Server Integration and Reporting Services, SharePoint 2012}
 
 \section{Kursy i certyfikaty}
     \cvitem{2014}{Ukończony kurs Oracle Exadata Technical Boot Camp}
     \cvitem{2014}{Ukończony kurs IBM InfoSphere Guardium Data Security}
-    \cvitem{2009}{Ukończony kurs Cisco CCNA}
-    \cvitem{2009}{Ukończony kurs pierwszego stopnia Linux Professional Institute}
 
 \lfoot{\scriptsize{Wyrażam zgodę na przetwarzanie moich danych osobowych zawartych w mojej aplikacji dla potrzeb niezbędnych do realizacji procesów rekrutacji (zgodnie z Ustawą z dnia 29 sierpnia 1997 r. o ochronie danych osobowych tj. Dz. U. z 2002 r., Nr 101, poz. 926, ze zm.).}}
 \end{document}
